--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
         "firebase": "^9.8.1",
         "formik": "^2.2.9",
         "framer-motion": "^4.1.13",
+        "fs": "^0.0.1-security",
         "history": "^5.3.0",
         "image-to-base64": "^2.2.0",
         "jsonwebtoken": "^8.5.1",
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^2.0.0",
+        "moment": "^2.29.4",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
         "react-apexcharts": "^1.4.0",
@@ -65,7 +67,7 @@
         "react-quill": "^2.0.0-beta.4",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
-        "react-scripts": "^4.0.3",
+        "react-scripts": "^5.0.1",
         "react-slick": "^0.28.1",
         "react-syntax-highlighter": "^15.5.0",
         "react-timer-hook": "^3.0.5",
@@ -75,7 +77,7 @@
         "redux-persist": "^6.0.0",
         "remark-gfm": "^3.0.1",
         "slick-carousel": "^1.8.1",
-        "stylis-plugin-rtl": "^2.1.1",
+        "stylis-plugin-rtl": "^2.0.2",
         "typescript": "^4.6.4",
         "uuid": "^8.3.2",
         "web-vitals": "^2.1.4",
@@ -85,7 +87,8 @@
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "format": "prettier --write \"src/**/*.js\""
     },
     "eslintConfig": {
         "extends": [
