--- a/package.json
+++ b/package.json
@@ -24,13 +24,18 @@
         "@mui/x-date-pickers": "^5.0.0-alpha.3",
         "@reduxjs/toolkit": "^1.8.1",
         "@tabler/icons": "^1.68.0",
+        "add": "^2.0.6",
         "amazon-cognito-identity-js": "^5.2.8",
         "apexcharts": "^3.35.2",
         "axios": "^0.25.0",
         "axios-mock-adapter": "^1.20.0",
         "chance": "^1.1.8",
         "csstype": "^3.0.11",
-        "date-fns": "^2.28.0",
+        "d3-geo": "^3.1.0",
+        "d3-scale": "^4.0.2",
+        "d3-scale-chromatic": "^3.0.0",
+        "date-fns": "^2.29.3",
+        "dayjs": "^1.11.7",
         "draft-js": "^0.11.7",
         "emoji-picker-react": "^3.5.1",
         "firebase": "^9.8.1",
@@ -68,10 +73,12 @@
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.2.1",
         "react-scripts": "^5.0.1",
+        "react-simple-maps": "^3.0.0",
         "react-slick": "^0.28.1",
         "react-syntax-highlighter": "^15.5.0",
         "react-timer-hook": "^3.0.5",
         "react-to-print": "^2.14.7",
+        "react-tooltip": "^5.10.4",
         "react-window": "^1.8.7",
         "redux": "^4.2.0",
         "redux-persist": "^6.0.0",
