added date range filter for all graphs

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "jwt-decode": "^3.1.2",
         "lodash": "^4.17.21",
         "material-ui-popup-state": "^2.0.0",
+        "materialui-daterange-picker": "^1.1.92",
         "moment": "^2.29.4",
         "prop-types": "^15.8.1",
         "react": "^17.0.2",
